--- a/src/index.css
+++ b/src/index.css
@@ -40,9 +40,9 @@ nav {
   width: 50px;
 }
 
-.social-links a {
-  margin-right: 1rem;
-}
+  .social-links a {
+    margin-left: 1rem; /* Add space between icons */
+  }
 
 .about-me {
   background: var(--offwhite);
